# dummy-manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Setup.bat
DiaBolic/: CMakeLists.txt
DiaBolic/inc/: camera.hpp  command_queue.hpp  descriptor_heap.hpp  dialogue_sample.hpp  dx12_helpers.hpp  glfw_app.hpp  renderer.hpp  resource_util.hpp  shader_compiler.hpp
DiaBolic/inc/pipelines/: geometry_pipeline.hpp  ui_pipeline.hpp
DiaBolic/inc/utility/: dx12_helpers.hpp  log.hpp  resource_util.hpp  shader_compiler.hpp
DiaBolic/shaders/: uber_vs.hlsl
DiaBolic/src/: camera.cpp  command_queue.cpp  descriptor_heap.cpp  dialogue_sample.cpp  dx12_helpers.cpp  glfw_app.cpp  main.cpp  pch.h  pch.hpp  renderer.cpp  resource_util.cpp  shader_compiler.cpp
DiaBolic/src/pipelines/: geometry_pipeline.cpp  ui_pipeline.cpp
DiaBolic/src/utility/: dx12_helpers.cpp  resource_util.cpp  shader_compiler.cpp
assets/shaders/: constant_buffers.hlsli  cube_spin.hlsl  uber_ps.hlsl
